# AKASH-DARPAN

./: .gitignore  CMakeLists.txt  README.md  akash_config.ini  build_windows.bat  setup_and_build.sh
docs/: TECHNICAL_REFERENCE.md
include/: akash_types.h  calibration_manager.h  centroid_engine.h  config_parser.h  dm_controller.h  image_loader.h  math_utils.h  playback_controller.h  renderer.h  shader_loader.h  telemetry.h  turbulence_analyzer.h  wavefront_reconstructor.h  wavefront_sensor.h
shaders/: dm_actuator.frag  dm_actuator.vert  spot.frag  spot.vert  wavefront.frag  wavefront.vert
tools/: gen_synthetic_data.cpp
